Regression: UV Pins interfere with UV seams (regression) #99156

Closed
opened 2022-06-25 02:14:18 +02:00 by Chris Blackbourn · 4 comments

Regression introduced e6e9f1ac5a

Open
subdivided_cube_uv_unwrap2.blend
image.png
From the UV Editor menu, choose UV > Unwrap > Unwrap

Bug:
image.png

Expected:

image.png

Original reported by /u/brecht in D14945

Regression introduced e6e9f1ac5a Open [subdivided_cube_uv_unwrap2.blend](https://archive.blender.org/developer/F13227073/subdivided_cube_uv_unwrap2.blend) ![image.png](https://archive.blender.org/developer/F13227075/image.png) From the UV Editor menu, choose UV > Unwrap > Unwrap Bug: ![image.png](https://archive.blender.org/developer/F13227081/image.png) Expected: ![image.png](https://archive.blender.org/developer/F13227078/image.png) Original reported by /u/brecht in [D14945](https://archive.blender.org/developer/D14945)
Author
Member

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn
Philipp Oeser changed title from UV Pins interfere with UV seams (regression) to Regression: UV Pins interfere with UV seams (regression) 2022-06-26 16:12:00 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Chris Blackbourn self-assigned this 2022-06-27 01:04:53 +02:00

This issue was referenced by 7a44f62bdb

This issue was referenced by 7a44f62bdb60b1fb302e7948ef661f076364d3f2
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99156
No description provided.