Fix T99156: UV parameterizer respects both Pins and Seams

Rgression from: e6e9f1ac5a2d

Reviewed By: Brecht Van Lommel

Differential Revision: D15292